--- a/index.html
+++ b/index.html
@@ -99,5 +99,69 @@
         </div>
       </div>
     </section>
+    <section id="profile">
+      <div class="container">
+        <h2 class="heading">
+          Profile
+        </h2>
+        <p class="heading-text">
+          It is a long established fact that a reader will be distracted by the readable<br>
+          content of a page when looking at its layout.<br class="sp-none">
+          The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
+        </p>
+        <div class="profile-group">
+          <div class="left-content">
+            <div class="my-face"></div>
+          </div>
+          <div class="right-content">
+            <h3 class="description-title">MyName</h3>
+            <p class="description-text">
+              Contrary to popular belief, Lorem Ipsum is not simply random 
+              text. It has roots in a piece of classical Latin literature from 45 
+              BC, making it over 2000 years old. Richard McClintock, a Latin 
+              professor at Hampden-Sydney College in Virginia, looked up 
+              one of the more obscure Latin words, consectetur
+            </p>
+            <h3 class="description-title">MySkills</h3>
+            <p class="description-text">
+              HTML/CSS,JavaScript,JQuery,PhotoShop
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="contact">
+      <div class="container">
+        <h2 class="heading">
+          Contact
+        </h2>
+        <p class="heading-text">
+          It is a long established fact that a reader will be distracted by the readable<br>
+          content of a page when looking at its layout.<br class="sp-none">
+          The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
+        </p>
+        <div class="contact-group">
+          <div class="left-content">
+            <div class="left-contact-content">
+              <h3 class="description-title">Mail</h3>
+              <a class="description-text link-text" href="mailto:xxx@xxx.com">xxx@xxx.com</a>
+              <h3 class="description-title">Tel</h3>
+              <a class="description-text link-text" href="tel:00000000000">000-0000-0000</a>
+            </div>
+          </div>
+          <div class="right-content">
+            <div class="right-contact-content">
+              <h3 class="description-title">SNS</h3>
+              <i class="fa fa-facebook fa-5x" aria-hidden="true"></i>
+             <i class="fa fa-twitter fa-5x" aria-hidden="true"></i>
+             <i class="fa fa-instagram fa-5x" aria-hidden="true"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <p class="copyright">©︎ 2017 WebCamp</p>
+    </footer>
   </body>
 </html>
