--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WALS成果物</title>
+    <title>開発スキルアップ HTML・CSS</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://use.fontawesome.com/2fd86bc506.js"></script>
   </head>
